Clean ups and reorganizations: - Additional Thanks entry - more info on getting gfc library - converted some C style comments to C++ style.

--- a/Thanks
+++ b/Thanks
@@ -212,6 +212,10 @@ Norman Vine <nhv@laserplot.com>
   related contributions.
 
 
+Roland Voegtli <webmaster@sanw.unibe.ch>
+  Great photorealistic textures.
+
+
 Carmelo Volpe <carmelo.volpe@csb.ki.se>
   Porting Flight Gear to the Metro Works development environment (PC/Mac)
 
