Added Olivers FAQ. Update README.Unix with additional Irix information. configure script addes search paths before looking for plib.  Tweaked   checks for win32 opengl/glut/glu libs.

--- a/Thanks
+++ b/Thanks
@@ -120,6 +120,10 @@ Bruce Jackson of NASA <e.b.jackson@larc.nasa.gov>
   flight model.  Bruce has patiently answered my many, many questions.
 
 
+Oliver L. K. <delise@rp-plus.de>
+  FAQ Maintainer.
+
+
 Tom Knienieder <knienieder@ms.netwing.at>
   Ported Steve's Audio library to Win32
 
