Added Robin Peel.

--- a/Thanks
+++ b/Thanks
@@ -160,6 +160,11 @@ Alan Murta <amurta@cs.man.ac.uk>
   Created the Generic Polygon Clipping library
 
 
+Robin Peel <robinp@mindspring.com>
+  Maintains the ever growing worldwide airport and runway database for
+  the Flight Gear project as well as for X-Plane.
+
+
 Friedemann Reinhard <mpt218@faupt212.physik.uni-erlangen.de>
   Contributed beginnings of a textured instrument panel.
 
