Exclude docs from base package. Added Curt Olson to Thanks file. Force use of plib joystick code.

--- a/Thanks
+++ b/Thanks
@@ -160,6 +160,11 @@ Alan Murta <amurta@cs.man.ac.uk>
   Created the Generic Polygon Clipping library
 
 
+Curt Olson <curt@flightgear.org>
+  Curt is the one that "herds that cats".  Lately Curt has been concetrating
+  on building better scenery.
+
+
 Robin Peel <robinp@mindspring.com>
   Maintains the ever growing worldwide airport and runway database for
   the Flight Gear project as well as for X-Plane.
